Infrastructure/load-balancer.tf
resource "aws_lb" "app" {
  name               = "nestjs-alb"
  internal           = false
  load_balancer_type = "application"
  subnets            = [aws_subnet.public.id, aws_subnet.public_b.id]
  security_groups = [aws_security_group.load-balancer.id]
}

resource "aws_lb_target_group" "nestjs" {
  name        = "nestjs-tg"
  port        = 3000
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "ip"
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.app.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.nestjs.arn
  }
}
